--- a/KuroganeHammer.Data/KuroganeHammer.Data.Api.Tests/packages.config
+++ b/KuroganeHammer.Data/KuroganeHammer.Data.Api.Tests/packages.config
@@ -2,13 +2,21 @@
 <packages>
   <package id="Effort.EF6" version="1.1.4" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Cors" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Testing" version="3.0.1" targetFramework="net452" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="NMemory" version="1.1.2" targetFramework="net452" />
   <package id="NUnit" version="2.6.4" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
 </packages>
