--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ KuroganeHammer.Web/KuroganeHammer.Web/bin/
 KurograneTransferDBTool/KurograneTransferDBTool/app.config
 KuroganeHammer.Data/KuroganeHammer.Data.Api.Tests/App.config
 KuroganeHammer.Data/KuroganeHammer.Data.Api/Web.config
+KuroganeHammer.AccountRegistration/AccountRegistrationTool/obj/
+KuroganeHammer.AccountRegistration/AccountRegistrationTool/bin/
