--- a/KuroganeHammer.AccountRegistration/AccountRegistrationTool/App.config
+++ b/KuroganeHammer.AccountRegistration/AccountRegistrationTool/App.config
@@ -6,6 +6,7 @@
   </configSections>
   <appSettings>
     <add key="servicelocation" value="http://localhost/KHApi/api/" />
+    <!--<add key="servicelocation" value="http://admin.kuroganehammer.com/api/ "/>-->
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
