--- a/KuroganeHammer.Data/KuroganeHammer.Data.Api/packages.config
+++ b/KuroganeHammer.Data/KuroganeHammer.Data.Api/packages.config
@@ -24,7 +24,6 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
@@ -46,6 +45,8 @@
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
+  <package id="Swashbuckle.Core" version="5.3.2" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
   <package id="WebApiThrottle" version="1.4.3" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
