- Added Notation Type and Controller - Added CharacterAttributeType and Controller - Both have basic tests - CharacterAttributeTypes holds a NotationId.  This is designed to allow each singular characterattribute to have a specified Notation type determining what it's Value should be interpreted as when retrieved.  CharacterAttributes table now has a CharacterAttributeTypeId as well as SmashAttributeTypeId.

--- a/KuroganeHammer.Data/KuroganeHammer.Data.Api.Tests/KuroganeHammer.Data.Api.Tests.csproj
+++ b/KuroganeHammer.Data/KuroganeHammer.Data.Api.Tests/KuroganeHammer.Data.Api.Tests.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Controllers\CharacterAttributes\CharacterAttributeAnonymousControllerTest.cs" />
     <Compile Include="Controllers\CharacterAttributes\CharacterAttributeCrudControllerTest.cs" />
     <Compile Include="Controllers\CharacterAttributes\CharacterAttributesAuthenticatedControllerTest.cs" />
+    <Compile Include="Controllers\CharacterAttributeTypes\CharacterAttributeTypeCrudControllerTest.cs" />
     <Compile Include="Controllers\Characters\CharacterAuthenticatedControllerTest.cs" />
     <Compile Include="Controllers\Characters\CharacterCrudControllerTest.cs" />
     <Compile Include="Controllers\Characters\CharacterAnonymousControllerTest.cs" />
@@ -148,6 +149,7 @@
     <Compile Include="Controllers\Moves\MoveAuthenticatedControllerTest.cs" />
     <Compile Include="Controllers\Moves\MoveCrudControllerTest.cs" />
     <Compile Include="Controllers\Movements\MovementsCrudControllerTest.cs" />
+    <Compile Include="Controllers\Notations\NotationCrudControllerTest.cs" />
     <Compile Include="Controllers\SmashAttributeTypes\SmashAttributeTypeAnonymousControllerTest.cs" />
     <Compile Include="Controllers\SmashAttributeTypes\SmashAttributeTypeAuthenticatedControllerTest.cs" />
     <Compile Include="Controllers\SmashAttributeTypes\SmashAttributeTypesControllerTest.cs" />
