--- a/KuroganeHammer.Data/KuroganeHammer.Data.Api/KuroganeHammer.Data.Api.csproj
+++ b/KuroganeHammer.Data/KuroganeHammer.Data.Api/KuroganeHammer.Data.Api.csproj
@@ -243,9 +243,11 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseApiController.cs" />
     <Compile Include="Controllers\CharacterAttributesController.cs" />
+    <Compile Include="Controllers\CharacterAttributeTypesController.cs" />
     <Compile Include="Controllers\CharactersController.cs" />
     <Compile Include="Controllers\MovementsController.cs" />
     <Compile Include="Controllers\MovesController.cs" />
+    <Compile Include="Controllers\NotationsController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Controllers\SmashAttributeTypesController.cs" />
     <Compile Include="DTOs\CharacterAttributeDto.cs" />
@@ -285,11 +287,32 @@
     <Compile Include="Migrations\201604260246316_nullable int post creation.Designer.cs">
       <DependentUpon>201604260246316_nullable int post creation.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201604270049012_add characterattributetype.cs" />
+    <Compile Include="Migrations\201604270049012_add characterattributetype.Designer.cs">
+      <DependentUpon>201604270049012_add characterattributetype.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201604270051023_char attr type id fk.cs" />
+    <Compile Include="Migrations\201604270051023_char attr type id fk.Designer.cs">
+      <DependentUpon>201604270051023_char attr type id fk.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201604270104390_null in.cs" />
+    <Compile Include="Migrations\201604270104390_null in.Designer.cs">
+      <DependentUpon>201604270104390_null in.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201604270112562_notation on charattrtype now.cs" />
+    <Compile Include="Migrations\201604270112562_notation on charattrtype now.Designer.cs">
+      <DependentUpon>201604270112562_notation on charattrtype now.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201604270116385_adding datetime to new models.cs" />
+    <Compile Include="Migrations\201604270116385_adding datetime to new models.Designer.cs">
+      <DependentUpon>201604270116385_adding datetime to new models.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CharacterAttribute.cs" />
     <Compile Include="Models\Character.cs" />
+    <Compile Include="Models\CharacterAttributeType.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ModelFactory.cs" />
     <Compile Include="Models\Move.cs" />
@@ -351,6 +374,21 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201604260246316_nullable int post creation.resx">
       <DependentUpon>201604260246316_nullable int post creation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604270049012_add characterattributetype.resx">
+      <DependentUpon>201604270049012_add characterattributetype.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604270051023_char attr type id fk.resx">
+      <DependentUpon>201604270051023_char attr type id fk.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604270104390_null in.resx">
+      <DependentUpon>201604270104390_null in.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604270112562_notation on charattrtype now.resx">
+      <DependentUpon>201604270112562_notation on charattrtype now.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604270116385_adding datetime to new models.resx">
+      <DependentUpon>201604270116385_adding datetime to new models.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SwaggerExtensions\onComplete.js" />
     <Content Include="Web.config" />
