--- a/KuroganeHammer.Data.Core/KuroganeHammer.Data.Core.csproj
+++ b/KuroganeHammer.Data.Core/KuroganeHammer.Data.Core.csproj
@@ -43,6 +43,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>..\KuroganeHammer.Data\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
@@ -57,6 +60,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AerialStat.cs" />
+    <Compile Include="Calculations\Calculator.cs" />
+    <Compile Include="Calculations\Modifiers.cs" />
     <Compile Include="CharacterAttributes.cs" />
     <Compile Include="CharacterStat.cs" />
     <Compile Include="CharacterUtility.cs" />
@@ -70,6 +75,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpecialStat.cs" />
     <Compile Include="Stat.cs" />
+    <Compile Include="Tests\CalculateTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
