- Added models for more complex calculator equations to clean up the core methods - Added support and tests for VersusModeKnockback, Hitstun and Shieldstun_normal

--- a/KuroganeHammer.Data.Core/KuroganeHammer.Data.Core.csproj
+++ b/KuroganeHammer.Data.Core/KuroganeHammer.Data.Core.csproj
@@ -62,6 +62,7 @@
     <Compile Include="AerialStat.cs" />
     <Compile Include="Calculations\Calculator.cs" />
     <Compile Include="Calculations\Modifiers.cs" />
+    <Compile Include="Calculations\ProblemModels.cs" />
     <Compile Include="CharacterAttributes.cs" />
     <Compile Include="CharacterStat.cs" />
     <Compile Include="CharacterUtility.cs" />
