- Added support for calculating the VsModeKnockback of a Move using the Move's stored data in the DB (first test passed!) on the CalculatorController - Added HitboxOptions enum to allow user to set which Hitbox data they want to calculate for since each hitbox data has different KBK, etc. data

--- a/KuroganeHammer.Data/KuroganeHammer.Data.Api.Tests/KuroganeHammer.Data.Api.Tests.csproj
+++ b/KuroganeHammer.Data/KuroganeHammer.Data.Api.Tests/KuroganeHammer.Data.Api.Tests.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Controllers\SmashAttributeTypes\SmashAttributeTypeAuthenticatedControllerTest.cs" />
     <Compile Include="Controllers\SmashAttributeTypes\SmashAttributeTypesControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Smoke\CalculatorSmokeTest.cs" />
     <Compile Include="Smoke\CharacterAttributeSmokeTest.cs" />
     <Compile Include="Smoke\CharacterSmokeTest.cs" />
     <Compile Include="Smoke\LoginSmokeTest.cs" />
