- Created a CompletedCalculationResponseDto to hold some more descriptive data rather than just the result.

--- a/KuroganeHammer.Data/KuroganeHammer.Data.Api/KuroganeHammer.Data.Api.csproj
+++ b/KuroganeHammer.Data/KuroganeHammer.Data.Api/KuroganeHammer.Data.Api.csproj
@@ -251,6 +251,7 @@
     <Compile Include="Controllers\NotationsController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Controllers\SmashAttributeTypesController.cs" />
+    <Compile Include="DTOs\CalculatorDtos.cs" />
     <Compile Include="DTOs\CharacterAttributeDto.cs" />
     <Compile Include="DTOs\CharacterAttributeRowDto.cs" />
     <Compile Include="DTOs\MoveDto.cs" />
