- Initial creation of DataSynchro app (login complete, core work for main window done) - Moved majority of models to Core project.  API specific ones for Identity remain

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ KuroganeHammer.DataSynchro/ConsoleApplication1/App.config
 KuroganeHammer.DataSynchro/App.config
 KuroganeHammer.DataSynchro/bin/
 KuroganeHammer.DataSynchro/obj/
+KuroganeHammer.Data/KuroganeHammer.Data.Models/obj/
+KuroganeHammer.Data/KuroganeHammer.Data.Models/bin/
