--- a/KuroganeHammer.DataSynchro/packages.config
+++ b/KuroganeHammer.DataSynchro/packages.config
@@ -1,6 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
+  <package id="MahApps.Metro" version="1.2.4.0" targetFramework="net452" />
 </packages>
