--- a/KurograneTransferDBTool/KurograneTransferDBTool/KurograneTransferDBTool.csproj
+++ b/KurograneTransferDBTool/KurograneTransferDBTool/KurograneTransferDBTool.csproj
@@ -40,6 +40,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\KuroganeHammer.Data\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="KuroganeHammer.Data.Api, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\KuroganeHammer.Data\KuroganeHammer.Data.Api\bin\KuroganeHammer.Data.Api.dll</HintPath>
@@ -49,6 +53,10 @@
     </Reference>
     <Reference Include="KuroganeHammer.WebScraper">
       <HintPath>E:\Development\C#projects\Kurogane.Data\KuroganeHammer.WebScraper\bin\Debug\KuroganeHammer.WebScraper.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.EntityFramework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\KuroganeHammer.Data\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.1\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -60,6 +68,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Net" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -79,10 +88,13 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Seeding\AppDbContext.cs" />
     <Compile Include="BaseTest.cs" />
     <Compile Include="Loader.cs" />
     <Compile Include="PropertyUpdateHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Seeding\Seeder.cs" />
+    <Compile Include="Seeding\TransferMethods.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
