--- a/KuroganeHammer.Data.Core/KuroganeHammer.Data.Core.csproj
+++ b/KuroganeHammer.Data.Core/KuroganeHammer.Data.Core.csproj
@@ -56,6 +56,9 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Web.Http">
+      <HintPath>..\KuroganeHammer.Data\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -77,6 +80,7 @@
     <Compile Include="Guard.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\BaseModel.cs" />
     <Compile Include="Models\CalculatorModels.cs" />
     <Compile Include="Models\Character.cs" />
     <Compile Include="Models\CharacterAttributeModels.cs" />
@@ -94,6 +98,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Requests\AccountRequest.cs" />
     <Compile Include="Requests\CharacterRequest.cs" />
+    <Compile Include="Requests\MovesRequest.cs" />
     <Compile Include="Requests\Request.cs" />
     <Compile Include="SpecialStat.cs" />
     <Compile Include="Stat.cs" />
