- Request now has debug directive instead of it being on random other Request class/methods - Full crud completed for char details, moves and movements (character attributes will happen soonish)

--- a/KuroganeHammer.DataSynchro/KuroganeHammer.DataSynchro.csproj
+++ b/KuroganeHammer.DataSynchro/KuroganeHammer.DataSynchro.csproj
@@ -71,6 +71,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CharacterMetadataTypes.cs" />
     <Compile Include="CharacterWindow.xaml.cs">
       <DependentUpon>CharacterWindow.xaml</DependentUpon>
     </Compile>
