--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ install:
   - nuget install NUnit.Runners -OutputDirectory testrunner
 script:
   - xbuild /p:Configuration=Release FrannHammer.Master.sln
-  - mono ./testrunner/NUnit.Runners.2.6.4/tools/tools/nunit-console.exe ./FrannHammer.Api.Tests/bin/Release/FrannHammer.Api.Tests.dll
+  - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./FrannHammer.Api.Tests/bin/Release/FrannHammer.Api.Tests.dll
   
