--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: csharp
 solution: FrannHammer.Master.sln
 install:
   - nuget restore FrannHammer.Master.sln
-  - nuget install NUnit.Runners -OutputDirectory testrunner
+  - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
 script:
   - xbuild /p:Configuration=Release FrannHammer.Master.sln
   - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./FrannHammer.Api.Tests/bin/Release/FrannHammer.Api.Tests.dll
