--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: csharp
 solution: FrannHammer.Api.sln
 install:
-  - nuget restore FrannHammer.Master.sln
+  - nuget restore FrannHammer.Api.sln
   #- nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
 script:
-  - xbuild /p:Configuration=Release FrannHammer.Master.sln
+  - xbuild /p:Configuration=Release FrannHammer.Api.sln
   #- mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./FrannHammer.Api.Tests/bin/Release/FrannHammer.Api.Tests.dll
   
