--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ KuroganeHammer.TransferDBTool/bin/
 FrannHammer.WebScraper/obj/Release/FrannHammer.WebScraper.csproj.FileListAbsolute.txt
 KuroganeHammer.TransferDBTool/obj/Release/KurograneHammer.TransferDBTool.csproj.FileListAbsolute.txt
 packages/
+FrannHammer.AccountRegistrationTool.Tests/bin/
+FrannHammer.AccountRegistrationTool.Tests/obj/
