- Effort support is back in for the Api.Tests project.  A bit more baked in now. - Tests that use local web server are currently set to IGNORE while I get owin self-hosting and DI with effort working - More nuget package cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ KuroganeHammer.TransferDBTool/obj/Release/KurograneHammer.TransferDBTool.csproj.
 packages/
 FrannHammer.AccountRegistrationTool.Tests/bin/
 FrannHammer.AccountRegistrationTool.Tests/obj/
+FrannHammer.Api.Tests/bin/
+FrannHammer.Api/bin/
+KuroganeHammer.TransferDBTool/obj/Debug/KurograneHammer.TransferDBTool.csproj.FileListAbsolute.txt
