--- a/FrannHammer.Api/Web.config
+++ b/FrannHammer.Api/Web.config
@@ -106,6 +106,7 @@
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="Effort.Provider" type="Effort.Provider.EffortProviderServices,Effort" />
     </providers>
   </entityFramework>
   <system.codedom>
