--- a/FrannHammer.Api.Tests/App.config
+++ b/FrannHammer.Api.Tests/App.config
@@ -5,16 +5,16 @@
 -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+    
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings>
     <add key="adminusername" value="KuroUser" />
     <add key="basicusername" value="GETuser" />
     <add key="adminpassword" value="***REMOVED***" />
     <add key="basicpassword" value="***REMOVED***" />
     <add key="site" value="http://localhost/KHapi/api/" />
-    
+    <add key="throttlingrequestspersecond" value="50" />
   </appSettings>
   <connectionStrings></connectionStrings>
   <runtime>
@@ -63,13 +63,17 @@
         <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin.Hosting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
+      <provider invariantName="Effort.Provider" type="Effort.Provider.EffortProviderServices,Effort" />
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-      
     </providers>
   </entityFramework>
 </configuration>
