- Continuing to make improvements to make remove all external server requirements from unit tests.  Almost there!

--- a/FrannHammer.Api.Tests/FrannHammer.Api.Tests.csproj
+++ b/FrannHammer.Api.Tests/FrannHammer.Api.Tests.csproj
@@ -120,16 +120,16 @@
     <Compile Include="Controllers\BaseAuthenticatedTest.cs" />
     <Compile Include="Controllers\BaseControllerTest.cs" />
     <Compile Include="Controllers\CharacterAttributes\CharacterAttributeAnonymousControllerTest.cs" />
-    <Compile Include="Controllers\CharacterAttributes\CharacterAttributeCrudControllerTest.cs" />
-    <Compile Include="Controllers\CharacterAttributeTypes\CharacterAttributeTypeCrudControllerTest.cs" />
-    <Compile Include="Controllers\Characters\CharacterCrudControllerTest.cs" />
-    <Compile Include="Controllers\Characters\CharacterAnonymousControllerTest.cs" />
+    <Compile Include="Controllers\CharacterAttributes\CharacterAttributeControllerTest.cs" />
+    <Compile Include="Controllers\CharacterAttributeTypes\CharacterAttributeTypeControllerTest.cs" />
+    <Compile Include="Controllers\Characters\CharacterControllerTest.cs" />
+    <Compile Include="Controllers\Characters\CharacterRequestAuthenticationTest.cs" />
     <Compile Include="Controllers\Characters\CharacterTests.cs" />
     <Compile Include="Controllers\Movements\MovementsAnonymousControllerTest.cs" />
     <Compile Include="Controllers\Moves\MoveAnonymousControllerTest.cs" />
-    <Compile Include="Controllers\Moves\MoveCrudControllerTest.cs" />
-    <Compile Include="Controllers\Movements\MovementsCrudControllerTest.cs" />
-    <Compile Include="Controllers\Notations\NotationCrudControllerTest.cs" />
+    <Compile Include="Controllers\Moves\MoveControllerTest.cs" />
+    <Compile Include="Controllers\Movements\MovementsControllerTest.cs" />
+    <Compile Include="Controllers\Notations\NotationControllerTest.cs" />
     <Compile Include="Controllers\SmashAttributeTypes\SmashAttributeTypeAnonymousControllerTest.cs" />
     <Compile Include="Controllers\SmashAttributeTypes\SmashAttributeTypesControllerTest.cs" />
     <Compile Include="EffortBaseTest.cs" />
